--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>tiles</title>
-    <link rel="stylesheet" href="css/index.css"> 
-</head>
 <body>
     <div id="gamecenter">
         <canvas id="game" width="480" height="320"></canvas>
@@ -14,8 +6,10 @@
 
     <script src="js/game.js"></script>
     <script src="js/spiller.js"></script>
+    <script src="js/nextLevel.js"></script>
     <script src="js/new.js"></script>
     <script src="js/movement.js"></script>
     <script src="js/collision.js"></script>
+    <script src="js/spillerimg.js"></script>
 </body>
 </html>
