--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>tiles</title>
+    <link rel="stylesheet" href="css/index.css"> 
+</head>
 <body>
     <div id="gamecenter">
         <canvas id="game" width="480" height="320"></canvas>
