--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="css/index.css"> 
 </head>
 <body>
-<img id="frog" src="bilder/frog.png" style="display: none;">
-<img id="Run" src="bilder/Run.png" style="display: none;">
-<img id="Jump" src="bilder/Jump.png" style="display: none;">
-<img id="Fall" src="bilder/Fall.png" style="display: none;">
+<img id="frog0" src="bilder/frog0.png" style="display: none;">
+<img id="Run0" src="bilder/Run0.png" style="display: none;">
+<img id="Jump0" src="bilder/Jump0.png" style="display: none;">
+<img id="Fall0" src="bilder/Fall0.png" style="display: none;">
+<img id="frog1" src="bilder/frog1.png" style="display: none;">
+<img id="Run1" src="bilder/Run1.png" style="display: none;">
+<img id="Jump1" src="bilder/Jump1.png" style="display: none;">
+<img id="Fall1" src="bilder/Fall1.png" style="display: none;">
     <div id="level"></div>
     <div id="gamecenter">
         <canvas id="game" width="480" height="320"></canvas>
+        <p id="teller">Time: 0</p>
     </div>
     <h1>Overskrift</h1>
 
@@ -49,5 +54,6 @@
     <script src="js/collision.js"></script>
     <script src="js/spillerimg.js"></script>
     <script src="js/nettside.js"></script>
+    <script src="js/telling.js"></script>
 </body>
 </html>
