--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -18,7 +18,7 @@
     <div id="level"></div>
     <div id="gamecenter">
         <canvas id="game" width="480" height="320"></canvas>
-        <p id="teller">Time: 0</p>
+        <p id="teller"></p>
     </div>
     <h1>Overskrift</h1>
 
