--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -30,7 +30,7 @@
     </ul>
     <div>
         <p id="cssspill" style="visibility: hidden;">Spillet handler om er frosk som letter  etter en prinsesse.</p>
-        <p id="css1spill"style="visibility: hidden;">JUMP=w eller oppover pillen
+        <p id="css1spill"style="visibility: hidden;">JUMP=space, w eller oppover pillen <br>
             LEFT=a eller venstre pillen<br>
             RIGHT=d eller høyre pillen<br>
             DEATH=rører spikes eller faller ut av map<br>
