--- a/GAME MED COLLI/js/hoved.html
+++ b/GAME MED COLLI/js/hoved.html
@@ -16,7 +16,12 @@
     <img id="Run1" src="bilder/Run1.png" style="display: none;">
     <img id="Jump1" src="bilder/Jump1.png" style="display: none;">
     <img id="Fall1" src="bilder/Fall1.png" style="display: none;">
-    <audio controls autoplay="true" loop volume="0.2" allow="autoplay" > <source src="sound/bgmusic.mp3" type="audio/mpeg"> </audio>
+    <audio controls autoplay loop volume="0.2" allow="autoplay" > <source src="sound/bgmusic.mp3" type="audio/mpeg"> </audio><!--vet virkelig ikke hvorfor det ikke fungerer-->
+    <!-- Adventure by Alexander Nakarada | https://www.serpentsoundstudios.com
+        Music promoted by https://www.chosic.com/free-music/all/
+        Attribution 4.0 International (CC BY 4.0)
+        https://creativecommons.org/licenses/by/4.0/--> 
+        
 
     <h1>Pepe's Adventure</h1>
     <div id="Tilbake" onclick="backTofront()">Tilbake</div>
