--- a/GAME MED COLLI/js/Frontpage.html
+++ b/GAME MED COLLI/js/Frontpage.html
@@ -13,7 +13,7 @@
     <div id="overskrift">Pepe's Adventure</div>
 
         <div id="container">
-            <div id="info1"> <a href="hoved.html">Start spillet</a></div>
+            <div id="info1" onclick="toGame()">Start spillet</div>
             <div id="info2">Regler</div>
             <div id="info3">Skapere</div>
             <div id="info4">Om prosjektet</div>
