--- a/GAME MED COLLI/js/Frontpage.html
+++ b/GAME MED COLLI/js/Frontpage.html
@@ -14,7 +14,7 @@
 
         <div id="container">
             <div id="info1" onclick="toGame()">Start spillet</div>
-            <div id="info2">Regler</div>
+            <div id="info2">Historie</div>
             <div id="info3">Skapere</div>
             <div id="info4">Om prosjektet</div>
         </div>  
